# wikipedia-path-finder

./: .eslintrc.cjs  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pixi.toml  pyproject.toml  vite.config.ts
api/: main.py  path-finder.ts  pip_install  requirements.txt  wikipedia_crawler.py  wikipedia_crawler_test.py
crawler_py/: crawler.py
crawler_rs/: Cargo.toml
crawler_rs/src/: lib.rs
crawlers/crawler_py/: crawler.py  test_crawler.py
crawlers/crawler_rs/: Cargo.toml
crawlers/crawler_rs/src/: lib.rs
crawlers/crawler_rs/tests/: test_crawler.rs
crawlers/crawler_rs_async/: Cargo.toml
crawlers/crawler_rs_async/src/: lib.rs  worker_args.rs
crawlers/crawler_rs_async/tests/: test_crawler.rs
crawlers/crawler_rs_async_channels/: Cargo.toml
crawlers/crawler_rs_async_channels/src/: lib.rs
crawlers/crawler_rs_async_channels/tests/: test_crawler.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  SearchResults.tsx  UserGuessForm.tsx
rust-api/: Cargo.toml
rust-api/src/: main.rs  wikipedia_crawler.rs
server_py/: main.py
server_rs/: Cargo.toml
server_rs/src/: main.rs
servers/server_py/: main.py
servers/server_rs/: Cargo.toml
servers/server_rs/src/: main.rs
src/: App.tsx  SearchResults.tsx
tests/: test_crawler.py  test_crawler.rs
titles/: Cargo.toml  generate_titles.py  titles.json  titles.py  titles.rs
wiki-response/: Cargo.toml
wiki-response/src/: lib.rs
