[package]
name = "crawler-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dotenvy = "0.15.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
titles = { path = "../../titles/" }

[lints.clippy]
pedantic = "warn"
