[package]
name = "crawler-rs-async-channels"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-channel = "2.5.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38.0", features = ["full"] }
titles = { path = "../../titles/" }
wiki-response = { path = "../../wiki-response/" }

[lints.clippy]
pedantic = "warn"
